--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -109,6 +109,7 @@
 					{% if current_user.has_role('admin') %}
 						<a class="dropdown-item" href="{{ url_for('auth.user_list_route') }}">Manage users</a>
 					{% endif %}
+						<a class="dropdown-item" href="#" onclick="javascript:Sner.dt.toggle_viatarget_column_visibility();">Toggle via_target (<span id="menu_dt_viatarget_column_visible_value"></span>)</a>
 						<a class="dropdown-item" href="{{ url_for('auth.profile_route') }}">Profile</a>
 						<a class="dropdown-item" href="{{ url_for('auth.logout_route') }}">Logout</a>
 					</div>
@@ -131,6 +132,8 @@
 		{% for category, message in get_flashed_messages(with_categories=true) %}
 		toastr['{{ category }}']('{{ message }}');
 		{% endfor %}
+
+		$('#menu_dt_viatarget_column_visible_value').text(sessionStorage.getItem('dt_viatarget_column_visible'));
 	</script>
 
 	<div id="modal-global" class="modal fade" tabindex="-1" role="dialog">
