--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -20,6 +20,7 @@
 					return Sner.storage.hbs.service_endpoint_dropdown({...row, 'value': row['service']});
 				}
 			}),
+			Sner.dt.column('via_target', {'visible': JSON.parse(sessionStorage.getItem('dt_viatarget_column_visible'))}),
 			Sner.dt.column('xtype'),
 			Sner.dt.column('data', {'className': 'forcewrap'}),
 			Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
